--- a/.env.json.example
+++ b/.env.json.example
@@ -5,5 +5,11 @@
         "name": "expression_db",
         "username": "expression_user",
         "password": "expression_password"
+    },
+    "redis": {
+        "host": "redis",
+        "port": 6379,
+        "password": "eYVX7EwVmmxKPCDmwMtyKVge8oLd2t81",
+        "database": 0
     }
 }
